src/app/startsurvey/startsurvey.page.scss
ion-content {
  --ion-background-color: #18191d;
}
.no-scroll {
  --overflow: hidden;
}
.imagecontainer {
  width: 100%;
  height: 77vh;
  position: relative;
}
.mainimage {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}
.gallerystack {
  width: 100vw;
  overflow: hidden;
  white-space: nowrap;
  background-color: #ffffffaa;
  bottom: 0;
  left: 0;
  position: absolute;

  ::-webkit-scrollbar {
    display: none;
  }

  .scroll {
    overflow: auto;
    background-color: #212123;
  }

  .cameraimagesbutton {
    width: 80px;
    height: 80px;
    border-radius: 0px !important;
    padding: 0px;
    box-shadow: none;
    margin: 0px 0px;
  }

  .cameraimagesbutton img {
    width: 70px;
    max-width: 70px;
  }
}
.infobar {
  position: absolute;
  top: 10px;
  left: 0px;
  width: 100%;

  .shotinfo {
    display: inline-block;
    background-color: #eebb5c;
    color: #000;
    font-size: 11px;
    padding: 6px 8px;
    border-radius: 10px;
    border: 1px solid #eebb5c;
    margin-bottom: 0;
  }

  .actionbutton {
    font-size: 16px;
    background-color: #ffffffd7;
    border-radius: 50%;
    padding: 6px;
    margin-top: 12px;
    border: 2px solid #ffffff;
  }
}
.captureactionarea {
  .button {
    border: none;
    height: auto;
    padding: 8px;
    box-sizing: border-box;
    font-size: 12px;
    color: #ffffff;
    font-weight: 100;
  }
  .button img {
    width: 20px;
    height: 20px;
    display: block;
    margin: 0 auto 8px;
  }
  .btn-link {
    display: inline-block;
    text-align: center;
    text-decoration: none;
  }
}

.retakeshotarea {
  .button {
    border: none;
    height: auto;
    padding: 8px;
    box-sizing: border-box;
    font-size: 12px;
    color: #ffffff;
    font-weight: 100;
  }
  .button img {
    width: 20px;
    height: 20px;
    display: block;
    margin: 0 auto 8px;
  }
  .btn-link {
    display: inline-block;
    text-align: center;
    text-decoration: none;
  }
}

.submenubuttonscontainer {
  width: 100vw;
  overflow: hidden;
  white-space: nowrap;

  ::-webkit-scrollbar {
    display: none;
  }

  .scroll {
    overflow: auto;
    background-color: #212123;
    border-radius: 10px;
    margin-bottom: 10px;
    margin-top: 10px;
  }
}
.childbuttons .normal {
  color: #ffffff;
  font-size: 12px;
  font-weight: 100;
}

.childbuttons .active {
  color: #eebb5c;
  font-size: 12px;
  font-weight: 600;
}

.childbuttons .disabled {
  color: #ffffff;
  font-size: 12px;
  font-weight: 100;
  opacity: 0.2;
}

// .childbuttons .completed {
//   color: #55efc4;
//   font-size: 12px;
//   font-weight: 600;
//   padding: 0 4px;
// }

// .childbuttons .completed-inactive {
//   color: #55efc4;
//   opacity: 0.6;
//   font-size: 12px;
//   font-weight: 100;
//   padding: 0 4px;
// }

.detailsformviewcontainer {
  height: 82.3vh;

  .additionalform {
    height: 100%;
    padding-top: 20px;

    .text-white {
      color: #ffffff;
    }

    .additionalformgrid {
      height: 90%;
      overflow-y: scroll;
    }

    .whiteradioitem {
      --color: #fff;
    }

    .form_input {
      color: #ffffff !important;
    }
  }
}

.noviewmodecontainer {
  height: 84.3vh;

  .noviewmodegrid {
    position: relative;
    top: 30vh;

    p {
      color: #eebb5c;
      font-weight: 600;
      opacity: 0.7;
    }

    .modetoggle{
      --background: #eebb5caa;
      --handle-background: #ffffff;

      --background-checked: #747474;
      --handle-background-checked: #eebb5c;
    }
  }
}

.mainbuttonscontainer {
  width: 100vw;
  height: 8vh;
  overflow: hidden;
  white-space: nowrap;

  ::-webkit-scrollbar {
    display: none;
  }

  .scroll {
    overflow: auto;
    background-color: #ffffff;
    width: 100%;
    border-top-left-radius: 18px;
    border-top-right-radius: 18px;
    text-align: center;
  }
}
.mainbuttons {
  margin-left: 0px;
  margin-right: 0px;

  .button {
    border: none;
    height: auto;
    width: 94px;
    padding: 12px;
    box-sizing: border-box;
    font-size: 14px;
  }
  .active {
    color: #eebb5c;
    font-weight: 600;
  }
  .normal {
    color: #000000;
    font-weight: 100;
  }
  // .completed {
  //   background-color: rgba(106,176,76,0.1);
  // }
  .button img {
    width: 20px;
    height: 20px;
    display: block;
    margin: 0 auto 8px;
  }
  .btn-link {
    display: inline-block;
    text-align: center;
    text-decoration: none;
  }
}

.blurbackground {
  filter: blur(2px);
}

.questionaireviewcontainer {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.questionaireview {
  width: 70%;
  position: absolute;
  top: 30vh;
  left: calc(50% - (70% / 2));
  z-index: 99;
}

.questionaireview-row {
  background-color: rgba($color: #ffffff, $alpha: 0.97);
  border-radius: 20px;
}

.questionaireview-col {
  padding: 16px;

  .error_div {
    height: 11px;
  }

  .error {
    color: rgb(223, 62, 62);
    font-size: 11px;
    margin-left: 5px;
  }
}

.questionaireview-row p {
  font-size: 14px;
}

.checkexistenceviewcontainer {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
}

.checkexistenceview {
  width: 70%;
  position: absolute;
  top: 30vh;
  left: calc(50% - (70% / 2));
  z-index: 99;
}

.checkexistenceview-row {
  background-color: rgba($color: #ffffff, $alpha: 0.97);
  border-radius: 20px;
}

.checkexistenceview-row p {
  font-size: 14px;
}

.inputform {
  --ion-background-color: rgba($color: #ffffff, $alpha: 0.97);
}

.white-translucent-bg {
  --ion-background-color: rgba($color: #ffffff, $alpha: 0.97);
}

.yellow-button-color {
  color: #f0bc5e !important;
}

.infodetailsviewcontainer {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;

  .infodetailsview {
    width: 100%;
    height: 166px;
    position: absolute;
    top: 0;
    z-index: 99;
    border-radius: 0 0 36px 36px;
    background-color: #ffffff;
  }

  .pending{
    color: #718093;
    font-weight: 100;
  }

  .completed{
    color: #009432;
    font-weight: 600;
  }

  .infoclosebutton {
    padding: 4px;
    font-size: 30px;
    position: absolute;
    right: 0;
    z-index: 100;
  }

  .infoslides {
    height: 150px;
    --bullet-background: #888888;
    --bullet-background-active: #718093;
  }

  .shotindex {
    margin: 0px;
    font-size: 16px;
    font-weight: 600;
    color: #18191d;
  }

  .shotinfo {
    margin: 6px 0px;
    font-size: 12px;
  }

  .shotquestion {
    margin: 0px;
    font-size: 12px;
  }

  .infodetailstoggle{
    position: absolute;
    top: 4px;
    left: 0;
    --background: #eebb5caa;
    --handle-background: #ffffff;
    --background-checked: #747474;
    --handle-background-checked: #eebb5c;
  }
}

